fixing timeline on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -1608,7 +1608,7 @@ figcaption{
     font-size: 1em;
     position: relative;
     background-color: white;
-    padding: 0;
+    padding-bottom: -10px;
     margin: 0;
   }
 
@@ -1632,7 +1632,7 @@ figcaption{
   .radio:checked ~ .content-tl p {
     max-height: 900px;
     position: relative;
-    top: 15px;
+    top: 10px;
     padding-bottom: 10px;
   } 
 }
